# LLVM_Project_

./: CMakeLists.txt  README.md  build.sh
include/: RaceDetectorPass.h
kernels/: test_kernel.cu
passes/: RaceDetector.cpp  RaceDetectorPass.cpp
src/: RaceDetectorPass.cpp
